feat(api): Enhance API Gateway with gRPC support and OpenAPI specifications
- Implemented gRPC service for health checks and metadata retrieval.
- Added OpenAPI specification for REST endpoints.
- Updated health check logic to include service dependencies.
- Introduced contract tests for OpenAPI and gRPC interfaces.
- Refactored routing logic to improve error handling and logging.
- Added performance benchmarks for proxy overhead and token validation.
- Updated CI workflows to restrict testing to unit tests and improve environment consistency.
- Enhanced documentation for API Gateway architecture and usage.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,10 +16,11 @@
         }
     },
     "forwardPorts": [
-        3000,
-        8000,
-        9000,
-        8080
+        3000, // for website
+        8000, // for API server Python/Flask port
+        9000, // for Auth server
+        8080, // for Keycloak admin console
+        9090  // for gRPC debugging
     ],
     "remoteEnv": {
         "PATH": "${containerEnv:PATH}:/home/appuser/.local/bin"
