--- a/.github/workflows/publish-auth.yml
+++ b/.github/workflows/publish-auth.yml
@@ -46,11 +46,12 @@ jobs:
           fi
 
       # 2. Defensive Testing
+      # Restricted to unit tests to avoid failing on integration tests (which need Keycloak)
       - name: Install & Test
         if: steps.check.outputs.SHOULD_RELEASE == 'true'
         run: |
           pip install -r auth/requirements-dev.txt
-          cd auth && pytest
+          cd auth && pytest tests/unit
 
       # 3. Build Service Package (The Dockerable Code)
       - name: Build Service Artifact
